--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             based in India
           </h1>
           <div class="mt-4">
-            <a class="main-btn" href="IMAGES/tybans_cv.pdf" download >Download CV</a>
+            <a class="main-btn" href="IMAGES/tybansCV.pdf" download >Download CV</a>
           </div>
         </div>
       </div>
@@ -208,6 +208,13 @@
                       Practical Training <span>- "Payroll System & Its Related Activities" in Bokaro Steel Plant.</span>
                     </a> 2017
                     <img src="IMAGES/sail.jpg" class="img-fluid rounded-3" alt="">
+                  </li>
+
+                  <li>
+                    <a href="#">
+                      Web Development <span>- "Full Stack Development with Cloud For Web and Mobile" from HERO VIRED (A Hero Group Company).</span>
+                    </a> 2023
+                    <img src="IMAGES/FSD-CER.png" class="img-fluid rounded-3" alt="">
                   </li>
                 </ul>
               </div>
