--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             based in India
           </h1>
           <div class="mt-4">
-            <a class="main-btn" href="IMAGES/tybansNew.pdf" download >Download CV</a>
+            <a class="main-btn" href="IMAGES/tybansNew1.pdf" download >Download CV</a>
           </div>
         </div>
       </div>
