--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             based in India
           </h1>
           <div class="mt-4">
-            <a class="main-btn" href="IMAGES/Taiyabn1.pdf" download >Download CV</a>
+            <a class="main-btn" href="IMAGES/tybans.pdf" download >Download CV</a>
           </div>
         </div>
       </div>
@@ -231,14 +231,14 @@
               <div class="tab-pane fade" id="pills-achievement" role="tabpanel" aria-labelledby="pills-achievement-tab">
                 <ul class="text-start ps-0">
 
-                  <li>
-                    <a href="#">Full Stack Development INTERNSHIP at Dono Consulting Pvt. Ltd.</a> April 2024 to July 2024
+                  <!-- <li>
+                    <a href="#">Full Stack Developer at Dono Consulting Pvt. Ltd.</a> April 2024 to July 2024
                     <div class="mt-4">
                       <a class="main-btn" href="IMAGES/Dono-consulting-completion-certificate.pdf" download >Download Completion Certificate</a>
                     </div>
                     
                   </li>
-                  <hr>
+                  <hr> -->
 
                   <li>
                     <a href="#">
